--- a/src/index.html
+++ b/src/index.html
@@ -69,12 +69,14 @@
 
 <template id="card-template">
   <li class="places__item card">
-    <img class="card__image" src="" alt="" />
+    <img class="card__image" src="#" alt="#" />
     <button type="button" class="card__delete-button"></button>
     <div class="card__description">
-      <h2 class="card__title">
-      </h2>
-      <button type="button" class="card__like-button"></button>
+      <h2 class="card__title"></h2>
+      <div class="card__like-container">
+        <button class="card__like-button" type="button"></button>
+        <span class="card__like-count">0</span>
+      </div>
     </div>
   </li>
 </template>
